# telegram_voice_client

.github/workflows/: build-apk.yml
audio_engine_cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  ring_buffer.cpp  ring_buffer.h  tgvoip_adapter.cpp  tgvoip_adapter.h
python_app/: backend.py  buildozer.spec  main.py  requirements.txt
python_app/android_src/com/example/voiceclient/: AudioEngine.java
python_app/ui/: groups_screen.py  login_screen.py
python_app/utils/: asyncio_helper.py  config.py  logger.py
